--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,14 @@ apply plugin: 'maven'
 sourceCompatibility = 1.7
 
 group = 'org.squiddev'
-version = '1.1.2'
+version = { ->
+	def stdout = new ByteArrayOutputStream()
+	exec {
+		commandLine 'git', 'describe', '--always', '--tags'
+		standardOutput = stdout
+	}
+	return stdout.toString().trim()
+}()
 
 configurations {
 	deployerJars
@@ -40,15 +47,28 @@ artifacts {
 	archives javadocJar
 }
 
+def isTag = {
+	def stdout = new ByteArrayOutputStream()
+	def error = new ByteArrayOutputStream()
+	exec {
+		commandLine 'git', 'describe', '--tag'
+		ignoreExitValue = true
+		errorOutput = error
+		standardOutput = stdout
+	}
+	return error.toString().trim() == "" && stdout.toString().trim != ""
+}
+
 uploadArchives {
 	repositories {
-		if (!project.hasProperty("ftpHost")) {
-			mavenLocal()
-		} else {
+		if ((project.hasProperty("ftpHost") || System.getenv('FTP_USERNAME') != null) && isTag()) {
 			mavenDeployer {
 				configuration = configurations.deployerJars
 				repository(url: ftpHost) {
-					authentication(userName: ftpUser, password: ftpPass)
+					authentication(
+							userName: project.hasProperty("ftpHost") ? ftpUser : System.getenv('FTP_USERNAME'),
+							password: project.hasProperty("ftpPass") ? ftpPass : System.getenv('FTP_PASSWORD')
+					)
 				}
 
 				pom.project {
@@ -79,6 +99,8 @@ uploadArchives {
 					}
 				}
 			}
+		} else {
+			mavenLocal()
 		}
 	}
 }
